--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@ pg_port: 5432
 
 bundle_install: False
 
+postgres_version: 9.6
 postgresrep_role: skip
 postgresrep_user: replicator
 #postgresrep_password: '' # Store this in an Ansible vault
