--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,4 +1,4 @@
 - name: restart postgresql
   service:
-    name: postgresql-9.4
+    name: "postgresql-{{ postgres_version }}"
     state: restarted
